# Skilllayer

./: .gitignore  AGENT_SETUP.md  BETA_OFFER.md  BUG_INVENTORY.md  CHANGELOG.md  COMPATIBILITY.md  DEMO_RECORDING_CHECKLIST.md  DEMO_SCRIPT.md  DIAGNOSTICS.md  EARLY_ACCESS.md  FEEDBACK_TEMPLATE.md  INSTALL.md  INSTALL_WITH_AI.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  ONE_PROMPT_TEST.md  POLICY.md  QUICKSTART.md  README.md  README_PUBLIC.md  RELEASE_NOTES.md  RELEASE_NOTES_0.2.0.md  RESULTS_TEMPLATE.md  SECURITY_REVIEW.md  SUPPORT.md  TESTER_GUIDE.md  UPDATE.md  codex_mcp_config.example.json  pyproject.toml  requirements.txt  setup.py  skilllayer.yaml.example
docs/: CLAUDE_CODE_SETUP.md  CURSOR_SETUP.md  EXTERNAL_TESTER_PACKAGE.md  SAFE_MODE.md  SECURITY_CHECKLIST.md  TELEMETRY_PRIVACY.md  TESTER_CHECKLIST.md  TROUBLESHOOTING.md  VERIFIED_TASK_EXECUTION_DECISIONS.md  VERIFIED_TASK_EXECUTION_SCHEMAS.md  VERIFIED_TASK_EXECUTION_USER_GUIDE.md  VTE_FOUNDATION_B_SCOPE.md  VTE_FOUNDATION_C_SAFE_RESUME.md  VTE_FOUNDATION_D_ORCHESTRATOR.md  VTE_HUMAN_REPORT.md  VTE_PERSISTENCE_SECURITY.md  VTE_PUBLIC_MCP_API.md  VTE_VERIFICATION_RECEIPT.md  index.html
scripts/: check_tag_version.py  generate_mcp_config.py  install.ps1  install.sh  release_acceptance.sh  uninstall.ps1  uninstall.sh  verify_install.ps1  verify_install.sh
site/: index.html  privacy.html  styles.css
tests/: test_accuracy_fixes.py  test_browser_smoke_workflow.py  test_check_port_workflow.py  test_commercial_packaging.py  test_compare_context_snapshots_workflow.py  test_cross_session_todo_workflow.py  (+64 more)
(+83 files in other folders)
